HTML,JYTHON,SQL: Teleports for 7S in competition period and spawnlist changes by Sandro

--- a/trunk/datapack_development/data/scripts.cfg
+++ b/trunk/datapack_development/data/scripts.cfg
@@ -101,6 +101,7 @@ teleports/1106_teleport_to_fantasy_isle/__init__.py
 teleports/1630_PaganTeleporters/__init__.py
 teleports/2000_NoblesseTeleport/__init__.py
 teleports/2211_HuntingGroundsTeleport/__init__.py
+teleports/2212_HuntingGroundsTeleport1/__init__.py
 teleports/2400_toivortex_exit/__init__.py
 teleports/6000_GrandBossTeleporters/__init__.py
 teleports/6111_ElrokiTeleporters/__init__.py
