--- a/trunk/datapack_development/data/scripts.cfg
+++ b/trunk/datapack_development/data/scripts.cfg
@@ -14,6 +14,7 @@ ai/group_template/Chests.java
 ai/group_template/fairy_trees.py
 ai/group_template/FeedableBeasts.java
 ai/group_template/PolymorphingAngel.java
+ai/group_template/PolymorphingOnAttack.java
 
 ai/individual/Antharas.java
 ai/individual/Baium.java
