JAVA,SQL: Summon Minions on attack feature based on work of Slyce (big thx Sandro)

--- a/trunk/datapack_development/data/scripts.cfg
+++ b/trunk/datapack_development/data/scripts.cfg
@@ -15,6 +15,7 @@ ai/group_template/fairy_trees.py
 ai/group_template/FeedableBeasts.java
 ai/group_template/PolymorphingAngel.java
 ai/group_template/PolymorphingOnAttack.java
+ai/group_template/SummonMinions.java
 
 ai/individual/Antharas.java
 ai/individual/Baium.java
