DP side for [L2669] (big thanks Sandro :-))

--- a/trunk/datapack_development/data/scripts.cfg
+++ b/trunk/datapack_development/data/scripts.cfg
@@ -20,6 +20,7 @@ ai/group_template/SummonMinions.java
 ai/individual/Antharas.java
 ai/individual/Baium.java
 ai/individual/Core.java
+ai/individual/DarkWaterDragon.java
 ai/individual/DrChaos.java
 ai/individual/FleeNpc.java
 ai/individual/Gordon.java
