--- a/trunk/datapack_development/data/scripts.cfg
+++ b/trunk/datapack_development/data/scripts.cfg
@@ -134,7 +134,7 @@ village_master/orc_occupation_change_2/__init__.py
 
 
 # Quests Section
-
+quests/SagasScripts/SagasSuperClass.java
 quests/1_LettersOfLove1/__init__.py
 quests/2_WhatWomenWant1/__init__.py
 quests/3_ReleaseDarkelfElder1/__init__.py
@@ -190,40 +190,6 @@ quests/63_PathoftheWarder/__init__.py
 quests/64_CertifiedBerserker/__init__.py
 quests/65_CertifiedSoulBreaker/__init__.py
 quests/66_CertifiedArbalester/__init__.py
-quests/67_SagaOfTheDoombringer/__init__.py
-quests/68_SagaOfTheSoulHound/__init__.py
-quests/69_SagaOfTheTrickster/__init__.py
-quests/70_SagaOfThePhoenixKnight/__init__.py
-quests/71_SagaOfEvasTemplar/__init__.py
-quests/72_SagaOfTheSwordMuse/__init__.py
-quests/73_SagaOfTheDuelist/__init__.py
-quests/74_SagaOfTheDreadnoughts/__init__.py
-quests/75_SagaOfTheTitan/__init__.py
-quests/76_SagaOfTheGrandKhavatari/__init__.py
-quests/77_SagaOfTheDominator/__init__.py
-quests/78_SagaOfTheDoomcryer/__init__.py
-quests/79_SagaOfTheAdventurer/__init__.py
-quests/80_SagaOfTheWindRider/__init__.py
-quests/81_SagaOfTheGhostHunter/__init__.py
-quests/82_SagaOfTheSagittarius/__init__.py
-quests/83_SagaOfTheMoonlightSentinel/__init__.py
-quests/84_SagaOfTheGhostSentinel/__init__.py
-quests/85_SagaOfTheCardinal/__init__.py
-quests/86_SagaOfTheHierophant/__init__.py
-quests/87_SagaOfEvasSaint/__init__.py
-quests/88_SagaOfTheArchmage/__init__.py
-quests/89_SagaOfTheMysticMuse/__init__.py
-quests/90_SagaOfTheStormScreamer/__init__.py
-quests/91_SagaOfTheArcanaLord/__init__.py
-quests/92_SagaOfTheElementalMaster/__init__.py
-quests/93_SagaOfTheSpectralMaster/__init__.py
-quests/94_SagaOfTheSoultaker/__init__.py
-quests/95_SagaOfTheHellKnight/__init__.py
-quests/96_SagaOfTheSpectralDancer/__init__.py
-quests/97_SagaOfTheShillienTemplar/__init__.py
-quests/98_SagaOfTheShillienSaint/__init__.py
-quests/99_SagaOfTheFortuneSeeker/__init__.py
-quests/100_SagaOfTheMaestro/__init__.py
 quests/101_SwordOfSolidarity/__init__.py
 quests/102_FungusFever/__init__.py
 quests/103_SpiritOfCraftsman/__init__.py
