new quest relics exploration

--- a/trunk/datapack_development/data/scripts.cfg
+++ b/trunk/datapack_development/data/scripts.cfg
@@ -249,6 +249,7 @@ quests/173_ToTheIsleOfSouls/__init__.py
 quests/174_SupplyCheck/__init__.py
 quests/175_TheWayOfTheWarrior/__init__.py
 quests/178_IconicTrinity/__init__.py
+quests/183_Relic_Exploration/__init__.py
 quests/211_TrialOfChallenger/__init__.py
 quests/212_TrialOfDuty/__init__.py
 quests/213_TrialOfSeeker/__init__.py
