cruma tower lvl limit for entrance

--- a/trunk/datapack_development/data/scripts.cfg
+++ b/trunk/datapack_development/data/scripts.cfg
@@ -101,6 +101,7 @@ teleports/1103_OracleTeleport/__init__.py
 teleports/1104_NewbieTravelToken/__init__.py
 teleports/1105_StrongholdsTeleports/__init__.py
 teleports/1106_teleport_to_fantasy_isle/__init__.py
+teleports/1107_CrumaTower/__init__.py
 teleports/1630_PaganTeleporters/__init__.py
 teleports/2000_NoblesseTeleport/__init__.py
 teleports/2211_HuntingGroundsTeleport/__init__.py
