--- a/trunk/datapack_development/data/scripts.cfg
+++ b/trunk/datapack_development/data/scripts.cfg
@@ -253,6 +253,9 @@ quests/178_IconicTrinity/__init__.py
 quests/183_Relic_Exploration/__init__.py
 quests/184_Nikolas_Cooperation_Contract/__init__.py
 quests/185_Nikolas_Cooperation_Consideration/__init__.py
+quests/186_Contract_Execution/__init__.py
+quests/187_Nikolas_Heart/__init__.py
+quests/188_Seal_Removal/__init__.py
 quests/211_TrialOfChallenger/__init__.py
 quests/212_TrialOfDuty/__init__.py
 quests/213_TrialOfSeeker/__init__.py
