--- a/trunk/datapack_development/data/scripts.cfg
+++ b/trunk/datapack_development/data/scripts.cfg
@@ -256,6 +256,9 @@ quests/185_Nikolas_Cooperation_Consideration/__init__.py
 quests/186_Contract_Execution/__init__.py
 quests/187_Nikolas_Heart/__init__.py
 quests/188_Seal_Removal/__init__.py
+quests/189_Contract_Completion/__init__.py
+quests/190_Lost_Dream/__init__.py
+quests/191_Vain_Conclusion/__init__.py
 quests/211_TrialOfChallenger/__init__.py
 quests/212_TrialOfDuty/__init__.py
 quests/213_TrialOfSeeker/__init__.py
