dark cloud mansion, thx GodKratos,gualbertof, gigiikun and everyone i forgot

--- a/trunk/datapack_development/data/scripts.cfg
+++ b/trunk/datapack_development/data/scripts.cfg
@@ -141,6 +141,9 @@ village_master/kamael_occupation_change/__init__.py
 village_master/orc_occupation_change_1/__init__.py
 village_master/orc_occupation_change_2/__init__.py
 
+# Instance Dungeons Section
+
+instances/DarkCloudMansion/__init__.py
 
 # Quests Section
 quests/SagasScripts/SagasSuperClass.java
