new quest a special order, thx charus

--- a/trunk/datapack_development/data/scripts.cfg
+++ b/trunk/datapack_development/data/scripts.cfg
@@ -184,6 +184,7 @@ quests/36_MakeASewingKit/__init__.py
 quests/37_PleaseMakeMeFormalWear/__init__.py
 quests/38_DragonFangs/__init__.py
 quests/39_RedEyedInvaders/__init__.py
+quests/40_ASpecialOrder/__init__.py
 quests/42_HelpTheUncle/__init__.py
 quests/43_HelpTheSister/__init__.py
 quests/44_HelpTheSon/__init__.py
@@ -501,3 +502,8 @@ custom/7000_HeroItems/__init__.py
 custom/8000_RaidbossInfo/__init__.py
 custom/8001_NpcLocationInfo/__init__.py
 custom/8004_PurchaseBracelet/__init__.py
+
+# Item Handlers
+handlers/ItemHandlers/WondrousCubic.java
+# Skill Handlers
+handlers/SkillHandlers/MysteriousCube.java
