--- a/trunk/datapack_development/data/scripts.cfg
+++ b/trunk/datapack_development/data/scripts.cfg
@@ -472,6 +472,7 @@ quests/634_InSearchofDimensionalFragments/__init__.py
 quests/636_TruthBeyond/__init__.py
 quests/637_ThroughOnceMore/__init__.py
 quests/638_SeekersOfTheHolyGrail/__init__.py
+quests/639_GuardiansOfTheHolyGrail/__init__.py
 quests/642_APowerfulPrimevalCreature/__init__.py
 quests/643_RiseandFalloftheElrokiTribe/__init__.py
 quests/644_GraveRobberAnnihilation/__init__.py
