--- a/trunk/datapack_development/build.xml
+++ b/trunk/datapack_development/build.xml
@@ -4,12 +4,12 @@
         This script will build the L2J_Datapack.
         
         $Author: DrLecter $
-        $Date: 2007-11-19 16:57:12 -0300 (mo, 19 nov 2007) $
-        $Revision: 3627 $  
+        $Date: 2009-05-20 17:10:12 -0300 (we, 20 may 2009) $
+        $Revision: 6067 $  
         
         This program is free software; you can redistribute it and/or modify
         it under the terms of the GNU General Public License as published by
-        the Free Software Foundation; either version 2, or (at your option)
+        the Free Software Foundation; either version 3, or (at your option)
         any later version.
         
         This program is distributed in the hope that it will be useful,
