Scripts: Fairy trees script translation from Python to Java, tnx Charus et al. I'm leaving the .py version aside just in case, revert if needed.

--- a/trunk/datapack_development/data/scripts.cfg
+++ b/trunk/datapack_development/data/scripts.cfg
@@ -11,7 +11,8 @@ ai/fantasy_isle/MC_Show.java
 
 ai/group_template/L2AttackableAIScript.java
 ai/group_template/Chests.java
-ai/group_template/fairy_trees.py
+#ai/group_template/fairy_trees.py
+ai/group_template/FairyTrees.java
 ai/group_template/FeedableBeasts.java
 ai/group_template/PolymorphingAngel.java
 ai/group_template/PolymorphingOnAttack.java
