fix for my previous commit, tnx DS

--- a/trunk/datapack_development/build.xml
+++ b/trunk/datapack_development/build.xml
@@ -91,7 +91,7 @@
          </fileset>
       </sync>
       <sync todir="${build.dist.lang}">
-        <fileset dir="$${basedir}/data/lang">
+        <fileset dir="${basedir}/data/lang">
           <include name="configurator/*.*"/>
           <include name="gsregister/*.*"/>
         </fileset>
