HTM/JAVA: Admin Menu updates by Bloodshed & Missing Transformations by rocknow.

--- a/trunk/datapack_development/data/scripts.cfg
+++ b/trunk/datapack_development/data/scripts.cfg
@@ -38,11 +38,14 @@ handlers/MasterHandler.java
 
 transformations/Akamanah.java
 transformations/Anakim.java
+transformations/ArcherCaptain.java
 transformations/AurabirdFalcon.java
 transformations/AurabirdOwl.java
 transformations/Benom.java
 transformations/Buffalo.java
+transformations/DarkElfMercenary.java
 transformations/DemonPrince.java
+transformations/DemonRace.java
 transformations/DivineEnchanter.java
 transformations/DivineHealer.java
 transformations/DivineKnight.java
@@ -56,7 +59,11 @@ transformations/DragonBomberNormal.java
 transformations/DragonBomberStrong.java
 transformations/DragonBomberWeak.java
 transformations/DwarfGolem.java
+transformations/DwarfMercenary.java
+transformations/ElfMercenary.java
 transformations/FlyingFinalForm.java
+transformations/FortressCaptain.java
+transformations/Frog.java
 transformations/GolemGuardianNormal.java
 transformations/GolemGuardianStrong.java
 transformations/GolemGuardianWeak.java
@@ -65,7 +72,10 @@ transformations/GrailApostleNormal.java
 transformations/GrailApostleStrong.java
 transformations/GrailApostleWeak.java
 transformations/GrizzlyBear.java
+transformations/GuardsoftheDawn.java
+transformations/HeavyTow.java
 transformations/Heretic.java
+transformations/HumanMercenary.java
 transformations/InfernoDrakeNormal.java
 transformations/InfernoDrakeStrong.java
 transformations/InfernoDrakeWeak.java
@@ -73,24 +83,41 @@ transformations/InquisitorBishop.java
 transformations/InquisitorElvenElder.java
 transformations/InquisitorShilienElder.java
 transformations/Kamael.java
+transformations/KamaelGuardCaptain.java
+transformations/KamaelMercenary.java
 transformations/Kiyachi.java
+transformations/KnightofDawn.java
 transformations/LavaGolem.java
 transformations/LightPurpleManedHorse.java
 transformations/LilimKnightNormal.java
 transformations/LilimKnightStrong.java
 transformations/LilimKnightWeak.java
+transformations/LureTow.java
+transformations/MagicLeader.java
+transformations/MyoRace.java
 transformations/Native.java
 transformations/OlMahum.java
 transformations/OnyxBeast.java
+transformations/OrcMercenary.java
 transformations/Pig.java
 transformations/Pixy.java
 transformations/PumpkinGhost.java
 transformations/Rabbit.java
 transformations/Ranku.java
+transformations/RoyalGuardCaptain.java
 transformations/SaberToothTiger.java
+transformations/Scarecrow.java
+transformations/ScrollBlue.java
+transformations/ScrollRed.java
+transformations/SnowKung.java
+transformations/SteamBeatle.java
+transformations/TawnyManedLion.java
 transformations/Teleporter.java
 transformations/Teleporter2.java
 transformations/Timitran.java
+transformations/TinGolem.java
+transformations/Tow.java
+transformations/Unicorniun.java
 transformations/UnicornNormal.java
 transformations/UnicornStrong.java
 transformations/UnicornWeak.java
@@ -99,8 +126,10 @@ transformations/VanguardDarkAvenger.java
 transformations/VanguardPaladin.java
 transformations/VanguardShilienKnight.java
 transformations/VanguardTempleKnight.java
+transformations/WingTow.java
 transformations/Yeti.java
 transformations/Yeti2.java
+transformations/YoungChild.java
 transformations/Zaken.java
 transformations/Zariche.java
 transformations/Zombie.java
