Certification system (Scripts only) by Gigiikun

--- a/trunk/datapack_development/data/scripts.cfg
+++ b/trunk/datapack_development/data/scripts.cfg
@@ -159,6 +159,7 @@ teleports/6111_ElrokiTeleporters/__init__.py
 
 village_master/9000_clan/__init__.py
 village_master/9001_alliance/__init__.py
+village_master/9002_SubClassCertification/__init__.py
 village_master/30026_bitz_occupation_change/__init__.py
 village_master/30031_biotin_occupation_change/__init__.py
 village_master/30154_asterios_occupation_change/__init__.py
@@ -551,3 +552,4 @@ custom/7000_HeroItems/__init__.py
 custom/8000_RaidbossInfo/__init__.py
 custom/8001_NpcLocationInfo/__init__.py
 custom/8004_PurchaseBracelet/__init__.py
+custom/8005_SubClassSkills/__init__.py
