- Dark Cloud Mansion instance in java. Thx  StevenP, Gigiikun - IOP Race script. Missing retail htms. Thx threat, Gigiikun - Eva's Gift Box script. Thx TheOne, Gigiikun

--- a/trunk/datapack_development/data/scripts.cfg
+++ b/trunk/datapack_development/data/scripts.cfg
@@ -11,11 +11,13 @@ ai/fantasy_isle/MC_Show.java
 
 ai/group_template/L2AttackableAIScript.java
 ai/group_template/Chests.java
+ai/group_template/EvasGiftBoxes.java
 ai/group_template/FairyTrees.java
 ai/group_template/FeedableBeasts.java
 ai/group_template/Monastery.java
 ai/group_template/PolymorphingAngel.java
 ai/group_template/PolymorphingOnAttack.java
+ai/group_template/PrisonGuards.java
 ai/group_template/SummonMinions.java
 
 ai/individual/Antharas.java
@@ -181,7 +183,7 @@ village_master/orc_occupation_change_2/__init__.py
 
 # Instance Dungeons Section
 
-instances/DarkCloudMansion/__init__.py
+instances/DarkCloudMansion/DarkCloudMansion.java
 
 # Quests Section
 quests/SagasScripts/SagasSuperClass.java
@@ -553,3 +555,4 @@ custom/8000_RaidbossInfo/__init__.py
 custom/8001_NpcLocationInfo/__init__.py
 custom/8004_PurchaseBracelet/__init__.py
 custom/8005_SubClassSkills/__init__.py
+custom/IOPRace/IOPRace.java
