Adding Trove 2.0.4 lib to DP too :P

--- a/trunk/datapack_development/build.xml
+++ b/trunk/datapack_development/build.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<project name="L2J_Datapack" default="dist" basedir=".">
+<project name="L2J_DataPack" default="dist" basedir=".">
   <description>
-        This script will build the L2J_Datapack.
+        This script will build the L2J_DataPack.
         
         $Author: DrLecter $
         $Date: 2009-05-20 17:10:12 -0300 (we, 20 may 2009) $
