--- a/trunk/datapack_development/.classpath
+++ b/trunk/datapack_development/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/L2_GameServer"/>
 	<classpathentry kind="lib" path="lib/javolution-5.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/mmocore.jar"/>
+	<classpathentry kind="lib" path="lib/trove-2.0.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
