--- a/trunk/datapack_development/data/scripts.cfg
+++ b/trunk/datapack_development/data/scripts.cfg
@@ -185,6 +185,7 @@ village_master/orc_occupation_change_2/__init__.py
 # Instance Dungeons Section
 
 instances/DarkCloudMansion/DarkCloudMansion.java
+instances/CrystalCaverns/CrystalCaverns.java
 
 # Quests Section
 quests/SagasScripts/SagasSuperClass.java
@@ -269,6 +270,9 @@ quests/121_PavelTheGiants/__init__.py
 quests/122_OminousNews/__init__.py
 quests/123_TheLeaderAndTheFollower/__init__.py
 quests/124_MeetingTheElroki/__init__.py
+quests/130_PathToHellbound/__init__.py
+quests/131_BirdInACage/__init__.py
+quests/133_ThatsBloodyHot/__init__.py
 quests/134_TempleMissionary/__init__.py
 quests/135_TempleExecutor/__init__.py
 quests/136_MoreThanMeetsTheEye/__init__.py
